                                  _   _ ____  _
                              ___| | | |  _ \| |
                             / __| | | | |_) | |
                            | (__| |_| |  _ <| |___
                             \___|\___/|_| \_\_____|

                                  Changelog

Daniel Fandrich (20 Nov 2008)
- Automatically detect OpenBSD's CA cert bundle.

Daniel Stenberg (19 Nov 2008)
- I removed the default use of "Pragma: no-cache" from libcurl when a proxy is
  used. It has been used since forever but it was never a good idea to use
  unless explicitly asked for.

- Josef Wolf's extension that allows a $TESTDIR/gdbinit$testnum file that when
  you use runtests.pl -g, will be sourced by gdb to allow additional fancy or
  whatever you see fit

- Christian Krause reported and fixed a memory leak that would occur with HTTP
  GSS/kerberos authentication (http://curl.haxx.se/bug/view.cgi?id=2284386)

- Andreas Wurf and Markus Koetter helped me analyze a problem that Andreas got
  when uploading files to a single FTP server using multiple easy handle
  handles with the multi interface. Occasionally a handle would stall in
  mysterious ways.

  The problem turned out to be a side-effect of the ConnectionExists()
  function's eagerness to re-use a handle for HTTP pipelining so it would
  select it even if already being in use, due to an inadequate check for its
  chances of being used for pipelnining.

Daniel Fandrich (17 Nov 2008)
- Added more compiler warning options for gcc 4.3

Yang Tse (17 Nov 2008)
- Fix a remaining problem in the inet_pton() runtime configure check. And
  fix internal Curl_inet_pton() failures to reject certain malformed literals.

- Make configure script check if ioctl with the SIOCGIFADDR command can be
  used, and define HAVE_IOCTL_SIOCGIFADDR if appropriate.

Daniel Stenberg (16 Nov 2008)
- Christian Krause fixed a build failure when building with gss support
  enabled and FTP disabled.
