@@ -18,7 +18,7 @@
 # This software is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY
 # KIND, either express or implied.
 #
-# $Id: configure.ac,v 1.383 2008-11-18 19:29:31 yangtse Exp $
+# $Id: configure.ac,v 1.384 2008-11-24 13:59:52 bagder Exp $
 #***************************************************************************
 dnl Process this file with autoconf to produce a configure script.
 
@@ -1476,6 +1476,10 @@ if test X"$OPT_LIBSSH2" != Xno; then
     LIBSSH2_ENABLED=1
     AC_DEFINE(USE_LIBSSH2, 1, [if libSSH2 is in use])
     AC_SUBST(USE_LIBSSH2, [1])
+
+    dnl check for this function only present in libssh2 0.19+
+    AC_CHECK_FUNCS( libssh2_session_block_directions )
+
   )
 
   if test X"$OPT_LIBSSH2" != Xoff &&
